<resources>
    <string name="app_name">SP18-BSE-024_Assin_02</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="bb">Back</string>
    <string name="be">Enter</string>

</resources>